# putovideo

./: .gitignore  README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json
server/: main.py  requirements.txt
src/: main.tsx  projectManager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: exporter.ts
src/ui/: App.tsx  ExportModal.tsx
web/: app.js  index.html  styles.css
