[package]
name = "putoeditor-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = [
	"macos-private-api"
] }

tauri-plugin-fs = "2"

tauri-plugin-dialog = "2"

[build-dependencies]

tauri-build = { version = "2", features = [] }
